compiler/testData/cli/jvm/_compatqualCheckerFrameworkAnnotations/compatqualDefault.out
compiler/testData/cli/jvm/_compatqualCheckerFrameworkAnnotations/compatqualUsage.kt:2:11: error: null cannot be a value of a non-null type 'kotlin.String'.
    b.foo(null)
          ^^^^
COMPILATION_ERROR
